--- a/.github/workflows/fediverse-action.yml
+++ b/.github/workflows/fediverse-action.yml
@@ -9,3 +9,4 @@ jobs:
       - uses: rzr/fediverse-action@master
         with:
           access-token: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+          host: "social.bau-ha.us"
